# triangleTools

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: bounds.cpp  continued_deck.cpp  disp.cpp  eta_decay.cpp  feynman_plot.cpp  omega_decay.cpp  plot_Qs.cpp  plot_bounds.cpp  plot_convergent.cpp  plot_logdivergent.cpp  realistic_deck.cpp  scalar_decay.cpp  scalar_deck.cpp
src/: CMakeLists.txt  TRIANGLEDECKLinkDef.h  args.hpp  colors.hpp  constants.hpp  dispersive.cpp  dispersive.hpp  feynman.cpp  feynman.hpp  feynman_triangle.cpp  feynman_triangle.hpp  interface.hpp  looptools.cpp  looptools.hpp  looptools_triangle.cpp  looptools_triangle.hpp  plot.cpp  plot.hpp  plotter.cpp  plotter.hpp  triangle_args.hpp  utilities.hpp
src/cling/: Load.C  triangleDeck.cpp  triangleTools.cpp
src/old/: dF3_integrand.cpp  dF3_integrand.hpp  dispersive_triangle.cpp  dispersive_triangle.hpp  feynman_triangle.cpp  feynman_triangle.hpp  projection_function.cpp  projection_function.hpp  quantum_numbers.hpp
src/plotting/: colors.hpp  data_set.hpp  plot.cpp  plot.hpp  plotter.cpp  plotter.hpp  utilities.hpp
